Réinitialisation du mot de passe d'email dans le fichier .env pour débuger la creation de struture

--- a/.env
+++ b/.env
@@ -59,10 +59,10 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=mariamathiaw92@gmail.com
-MAIL_PASSWORD="ibhv mzwd lpon ahyq"
+MAIL_PASSWORD="hwhd mvuq agwn qybp"
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=mariamathiaw92@gmail.com
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_NAME="e-Blood"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
